--- a/contactus.html
+++ b/contactus.html
@@ -29,7 +29,7 @@
           <label for="textarea1">Mensaje</label>
         </div>
         
-      <center><a class="waves-effect waves-light btn" type="submit">Enviar</a></center>
+      <center><a type="submit" class="waves-effect waves-light btn" >Enviar</a></center>
     </form>
   </div>
 </div>
