--- a/contactus.html
+++ b/contactus.html
@@ -48,8 +48,10 @@
           <textarea name="mensaje" class="materialize-textarea"></textarea>
           <label >Mensaje</label>
         </div>
-        
-      <center><a type="Submit" class="waves-effect waves-light btn">Enviar</a></center>
+       <div class="container">
+      <a type="Submit" class="waves-effect waves-light btn ">Enviar</a>
+      <a href="index.php" class="waves-effect waves-light btn ">Volver</a>
+      </div> 
     </form>
   </div>
 </div>
