--- a/contactus.html
+++ b/contactus.html
@@ -49,8 +49,10 @@
           <label >Mensaje</label>
         </div>
        <div class="container">
-      <a type="Submit" class="waves-effect waves-light btn ">Enviar</a>
-      <a href="index.php" class="waves-effect waves-light btn ">Volver</a>
+       
+       <button type="submit" class="waves-effect waves-light btn">Enviar</button>
+      <a href="index.php" class="waves-effect waves-light btn">Cancelar</a>
+      
       </div> 
     </form>
   </div>
