--- a/contactus.html
+++ b/contactus.html
@@ -27,8 +27,8 @@
         </div>
        <div class="container">
        
-       <button type="submit" class="waves-effect waves-light btn">Enviar</button>
-      <a href="index.php" class="waves-effect waves-light btn">Cancelar</a>
+      <center><button type="submit" class="waves-effect waves-light btn">Enviar</button>
+      <a href="index.php" class="waves-effect waves-light btn">Cancelar</a></center> 
       
       </div> 
     </form>
